feat(index): 新增模拟查询接口数据及问答卡片展开收起交互

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
-    "serve": "parcel src/index.html --dist-dir .dist-cache",
-    "build": "parcel build src/index.html --public-url ./"
+    "serve": "cp -r public .dist-cache && parcel src/index.html --dist-dir .dist-cache",
+    "build": "parcel build src/index.html --public-url ./ && cp -r public dist",
+    "copy": "cp -r public .dist-cache"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "2.9.2",
